# nand2tetris-rs

./: .gitignore  Cargo.toml  README.md
assembler/: Cargo.toml  my_pong.hack
assembler/src/: code.rs  command.rs  main.rs
assembler/tests/: test_max.rs  test_rect.rs  tests.rs
assembler/tests/chapter06/: test_add.rs  test_pong.rs
behavior/: Cargo.toml
behavior/src/: keyboard.rs  lib.rs  memory.rs  module.rs  ram.rs  rom.rs  screen.rs
compiler/: Cargo.toml
compiler/src/: compiler.rs  dump_vm.rs  dump_xml.rs  expression.rs  foundation.rs  lib.rs  main.rs  parsable.rs  parser.rs  program.rs  statement.rs  token.rs  tokenizer.rs
compiler/tests/: tests.rs
compiler/tests/chapter10/: ArrayTest_Main.rs  ArrayTest_MainT.rs  ExpressionLessSquare_Main.rs  ExpressionLessSquare_MainT.rs  ExpressionLessSquare_Square.rs  ExpressionLessSquare_SquareGame.rs  ExpressionLessSquare_SquareGameT.rs  ExpressionLessSquare_SquareT.rs  Square_Main.rs  Square_MainT.rs  Square_Square.rs  Square_SquareGame.rs  Square_SquareGameT.rs  Square_SquareT.rs  test_maint.rs
compiler/tests/chapter11/: Average.rs  ComplexArrays.rs  ConvertToBin.rs  Pong.rs  Seven.rs  Square.rs
emulator/: Cargo.toml
emulator/src/: main.rs  modules.rs
rtl/: Cargo.toml
rtl/src/: add16.rs  alu.rs  and.rs  and16.rs  bit.rs  cpu.rs  dff.rs  dmux.rs  dmux4way.rs  dmux8way.rs  fulladder.rs  halfadder.rs  inc16.rs  lib.rs  mux.rs  mux16.rs  mux4way16.rs  mux8way16.rs  nand.rs  not.rs  not16.rs  or.rs  or16.rs  or8way.rs  pc.rs  ram16k.rs  ram4k.rs  ram512.rs  ram64.rs  ram8.rs  register.rs  xor.rs
sim/chapter01/: Cargo.toml  build.rs
sim/chapter01/src/: And.rs  (+16 more)
sim/chapter02/: Cargo.toml  build.rs
sim/chapter05/: Cargo.toml  build.rs
sim/chapter05/src/: CPU.rs  Computer.rs  ComputerAdd.rs  ComputerMax.rs  ComputerRect.rs  Memory.rs  lib.rs
sim/chapter07/: Cargo.toml
sim/chapter07/src/: BasicTest.rs  PointerTest.rs  SimpleAdd.rs  StackTest.rs  StaticTest.rs  lib.rs
sim/chapter08/: Cargo.toml
sim/chapter08/src/: BasicLoop.rs  Computer.rs  FibonacciElement.rs  FibonacciSeries.rs  SimpleFunction.rs  StaticsTest.rs  lib.rs
tool/hdl2kaze/: Cargo.toml
vm/: Cargo.toml
vm/src/: code.rs  command.rs
(+24 files in other folders)
