[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
kaze = { path = "../kaze/kaze" }
#kaze = { git = "https://github.com/ar90n/kaze.git", branch = "verilog-generation-support" }
rtl = { path = "../rtl"}

[dependencies]
kaze = { path = "../kaze/kaze" }
behavior = { path = "../behavior"}
vm = { path = "../vm"}
assembler = { path = "../assembler"}
compiler = { path = "../compiler"}
clap = { version = "3.1.2", features = ["derive"] }
anyhow = "1.0.55"
