[package]
name = "chapter07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
kaze = { git = "https://github.com/ar90n/kaze.git", branch = "verilog-generation-support" }
rtl = { path = "../../rtl"}

[dependencies]
rstest = "0.12.0"
kaze = { path = "../../kaze/kaze" }
behavior = { path = "../../behavior"}
vm = { path = "../../vm"}
assembler = { path = "../../assembler"}